# github-stats-puller

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  backfill_events.py  docker-compose.yml  gh.env  pyproject.toml
clickhouse/init/: 01_create_schema.sql  02_create_user.sql
github_stats/: __init__.py  __main__.py  app.py  backfill.py  client.py  database.py  main.py  models.py  server.py  storage.py
github_stats/stores/: __init__.py  base.py  clickhouse.py  memory.py  setup.py
